src/test/ui/span/borrowck-fn-in-const-b.stderr
error[E0596]: cannot borrow immutable borrowed content `*x` as mutable
  --> $DIR/borrowck-fn-in-const-b.rs:7:9
   |
LL |     fn broken(x: &Vec<String>) {
   |                  ------------ use `&mut Vec<String>` here to make mutable
LL |         x.push(format!("this is broken"));
   |         ^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
